# Tests

./: .gitignore
Task_1_oneT/: main.cpp
Task_2_twoT/: CMakeLists.txt  README.md  main.cpp
Task_2_twoT/src/: List.hpp
